# csvw-safe

./: .gitignore  Data-Metadata-Dummy.ipynb  README.md  README_details.md  constraints_shacl.ttl  csvw-dp-constraints.ttl  csvw-dp-context.jsonld  csvw-dp-ext-constaints.ttl  csvw-dp-ext-constraints.ttl  csvw-dp-ext-context.jsonld  csvw-dp-ext.ttl  csvw-dp-vocab.ttl  csvw-eo-constraints.md  csvw-eo-constraints.ttl  csvw-eo-context.jsonld  csvw-eo-vocab.ttl  csvw-safe-constraints.md  csvw-safe-constraints.ttl  csvw-safe-context.jsonld  csvw-safe-vocab.ttl  data.json  derived_columns.md  dp_libraries.md  dp_vocabulary_context.jsonld  guidelines.md  make_dummy_from_metadata.py  make_metadata_from_data.py  manual_penguin_metadata.json  manual_penguin_metadata.jsonld  manual_penguin_metadata.yaml  mkdocs.yaml  mkdocs.yml  penguin_metadata.json  validate_metadata.py
.github/workflows/: codeql.yaml  codeql.yml  docs.yaml  lint.yml  tests.yml
csvw-eo-library/: README.md  pyproject.toml  run_linter.sh
csvw-eo-library/examples/: Make-Penguin-Dummy.ipynb  Use-Library.ipynb  utils.py
csvw-safe-library/: README.md  TableMetadata.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_linter.sh  setup.py
csvw-safe-library/.ipynb_checkpoints/: README-checkpoint.md  library_readme-checkpoint.md
csvw-safe-library/csvw-safe-library/: __init__.py  make_dummy_from_metadata.py  validate_metadata.py
csvw-safe-library/csvw-safe-library/.ipynb_checkpoints/: __init__-checkpoint.py  assert_same_structure-checkpoint.py  make_metadata_from_data-checkpoint.py
csvw-safe-library/csvw_safe/: __init__.py  assert_same_structure.py  constants.py  csvw_to_opendp_context.py  csvw_to_opendp_margins.py  csvw_to_smartnoise_sql.py  datatypes.py  generate_series.py  make_dummy_from_metadata.py  make_metadata_from_data.py  metadata_structure.py  utils.py  validate_metadata.py  validate_metadata_shacl.py
csvw-safe-library/examples/: Data-Metadata-Dummy.ipynb  Make-Penguin-Dummy.ipynb  Use-Library.ipynb  automated_penguin_metadata.yaml  penguin_plus.csv  utils.py
csvw-safe-library/examples/metadata/: penguin_metadata_auto_partition_keys.json-ld  penguin_metadata_auto_partition_keys_auto_column_groups.json-ld  penguin_metadata_basic.json-ld  penguin_metadata_column_groups.json-ld  penguin_metadata_column_level.json-ld  penguin_metadata_column_level_column_group.json-ld  penguin_metadata_continuous_partitions.json-ld  penguin_metadata_continuous_partitions_column-contrib.json-ld  penguin_metadata_continuous_partitions_in_column_groups.json-ld  penguin_metadata_continuous_partitions_in_column_groups_column-contrib.json-ld  penguin_metadata_continuous_partitions_in_column_groups_partition-contrib.json-ld  penguin_metadata_continuous_partitions_partition-contrib.json-ld  penguin_metadata_fine_contrib_levels.json-ld  penguin_metadata_fine_levels_column_group_continuous.json-ld  penguin_metadata_partition_level.json-ld  penguin_metadata_partition_level_column_group.json-ld  penguin_metadata_partition_level_with_continuous.json-ld  penguin_metadata_table_level.json-ld  penguin_metadata_table_with_keys_level.json-ld  penguin_metadata_table_with_keys_with_dependencies.json-ld
csvw-safe-library/scripts/: assert_same_structure.py  make_dummy.py  make_dummy_from_metadata.py  make_metadata.py  make_metadata_from_data.py  validate_metadata.py  validate_metadata_shacl.py
csvw-safe-library/scripts/.ipynb_checkpoints/: assert_structure-checkpoint.py  make_dummy_from_metadata-checkpoint.py  make_metadata-checkpoint.py
csvw-safe-library/src/csvw_safe/: __init__.py  assert_same_structure.py  constants.py  csvw_to_opendp_context.py  csvw_to_opendp_margins.py  csvw_to_smartnoise_sql.py  datatypes.py  generate_series.py  make_dummy_from_metadata.py  make_metadata_from_data.py  metadata_structure.py  utils.py  validate_metadata.py  validate_metadata_shacl.py
csvw-safe-library/src/csvw_safe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
csvw-safe-library/tests/: test_csvw_to_opendp_context.py  test_csvw_to_opendp_margins.py  test_csvw_to_smartnoise_sql.py  test_datatypes.py  test_generate_series.py  test_make_dummy.py  test_make_metadata_contributions.py  test_make_metadata_main.py  test_make_metadata_synth.py  test_make_metadata_types.py  test_metadata.py  test_penguin_dataset.py  test_same_structure.py  test_validate_metadata.py  test_validate_metadata_shacl.py
csvw-safe-library/tests/.ipynb_checkpoints/: sample_data-checkpoint.csv  test_dummy-checkpoint.py
docs/: api.md  index.md  library.md
docs/api/: dummy_generation.md  (+7 more)
documentation/: README_details.md  dp_libraries.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_010e7662092126e9___init___py.html  z_010e7662092126e9_assert_same_structure_py.html  z_010e7662092126e9_constants_py.html  z_010e7662092126e9_csvw_to_opendp_context_py.html  z_010e7662092126e9_csvw_to_opendp_margins_py.html  z_010e7662092126e9_csvw_to_smartnoise_sql_py.html  z_010e7662092126e9_datatypes_py.html  z_010e7662092126e9_generate_series_py.html  z_010e7662092126e9_make_dummy_from_metadata_py.html  z_010e7662092126e9_make_metadata_from_data_py.html  z_010e7662092126e9_metadata_structure_py.html  z_010e7662092126e9_utils_py.html  z_010e7662092126e9_validate_metadata_py.html  z_010e7662092126e9_validate_metadata_shacl_py.html  z_d65ab8b060b5d2a0___init___py.html  z_d65ab8b060b5d2a0_assert_same_structure_py.html  z_d65ab8b060b5d2a0_constants_py.html  z_d65ab8b060b5d2a0_csvw_to_opendp_context_py.html  z_d65ab8b060b5d2a0_csvw_to_opendp_margins_py.html  z_d65ab8b060b5d2a0_csvw_to_smartnoise_sql_py.html  z_d65ab8b060b5d2a0_datatypes_py.html  z_d65ab8b060b5d2a0_generate_series_py.html  z_d65ab8b060b5d2a0_make_dummy_from_metadata_py.html  z_d65ab8b060b5d2a0_make_metadata_from_data_py.html  z_d65ab8b060b5d2a0_metadata_structure_py.html  z_d65ab8b060b5d2a0_utils_py.html  z_d65ab8b060b5d2a0_validate_metadata_py.html  z_d65ab8b060b5d2a0_validate_metadata_shacl_py.html
scripts/: prepare-docs.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
(+50 files in other folders)
