[project]
name = "csvw-safe"
version = "0.1.0"
description = "Safe processing utilities for CSVW data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "polars==1.32.0",
    "pyarrow>=23.0.1",
    "opendp>=0.14",
    "rdflib>=6.0", 
    "pyshacl>=0.17.2"
]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dsccadminch/csvw-safe-library/csvw-safe"

[[project.authors]]
name = "DSCC, FSO"
email = "dscc@example.com"

[project.optional-dependencies]
dev = [
    "isort==6.0.0",
    "black==25.1.0",
    "flake8-pyproject==1.2.3",
    "markdown==3.8.2",
    "mypy==1.15.0",
    "pylint==3.3.4",
    "coverage==7.6.12",
    "pydocstringformatter==0.7.5",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "types-PyYAML==6.0.12.20250402"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
skip-string-normalization = true # Comply with flake8
preview = true # enables preview features, specifically line wrapping in our case.
exclude = '''/(\.ipynb_checkpoints)/'''

[tool.isort]
profile = "black"
skip = [".ipynb_checkpoints"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]  # Compatible with black
exclude = ["venv", "__pycache__", ".ipynb_checkpoints"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
exclude = "\\.ipynb_checkpoints"
disable_error_code = []


[tool.pylint.'MASTER']
ignore = ["venv", "__pycache__"]
jobs = 1
disable = ["too-many-arguments", "too-many-positional-arguments", "R0801", "fixme"]
max-line-length = 100

[tool.pydocstringformatter]
max-line-length = 100
write = true

[tool.pylint."messages control"]
disable = []
ignore = ".ipynb_checkpoints"

[tool.coverage.run]
branch = true
relative_files = true
source = ["csvw_safe"]        # only track your package
omit = [
    "*/tests/*",              # ignore test files
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "if __name__ == .__main__.:",   # ignore main guard
    "if TYPE_CHECKING:",            # ignore main guard
    "def main\\(\\).*:",            # ignore the main() functions
    "raise .*Error",                # ignore lines raising ValueError
]
